--- a/ModelTrainer.ipynb
+++ b/ModelTrainer.ipynb
@@ -2,14 +2,34 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "pycharm": {
           "is_executing": false
         }
       },
-      "outputs": [],
-      "source": "import glob\nimport os\nimport tensorflow as tf\nimport tflearn\nfrom tflearn.layers.conv import conv_2d,max_pool_2d\nfrom tflearn.layers.core import input_data,dropout,fully_connected\nfrom tflearn.layers.estimator import regression\nimport numpy as np\nimport cv2\nfrom sklearn.utils import shuffle"
+      "outputs": [
+        {
+          "name": "stderr",
+          "text": [
+            "WARNING: Logging before flag parsing goes to stderr.\nW0718 14:05:09.693006  1844 deprecation_wrapper.py:119] From d:\\documents\\programming\\python\\workspace\\magic mirror\\cnn gesture recognition\\venv\\lib\\site-packages\\tflearn\\helpers\\summarizer.py:9: The name tf.summary.merge is deprecated. Please use tf.compat.v1.summary.merge instead.\n\n",
+            "W0718 14:05:09.697012  1844 deprecation_wrapper.py:119] From d:\\documents\\programming\\python\\workspace\\magic mirror\\cnn gesture recognition\\venv\\lib\\site-packages\\tflearn\\helpers\\trainer.py:25: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n\n",
+            "W0718 14:05:09.702589  1844 deprecation_wrapper.py:119] From d:\\documents\\programming\\python\\workspace\\magic mirror\\cnn gesture recognition\\venv\\lib\\site-packages\\tflearn\\collections.py:13: The name tf.GraphKeys is deprecated. Please use tf.compat.v1.GraphKeys instead.\n\n",
+            "W0718 14:05:09.708591  1844 deprecation_wrapper.py:119] From d:\\documents\\programming\\python\\workspace\\magic mirror\\cnn gesture recognition\\venv\\lib\\site-packages\\tflearn\\config.py:123: The name tf.get_collection is deprecated. Please use tf.compat.v1.get_collection instead.\n\n",
+            "W0718 14:05:09.714593  1844 deprecation_wrapper.py:119] From d:\\documents\\programming\\python\\workspace\\magic mirror\\cnn gesture recognition\\venv\\lib\\site-packages\\tflearn\\config.py:129: The name tf.add_to_collection is deprecated. Please use tf.compat.v1.add_to_collection instead.\n\n",
+            "W0718 14:05:09.716594  1844 deprecation_wrapper.py:119] From d:\\documents\\programming\\python\\workspace\\magic mirror\\cnn gesture recognition\\venv\\lib\\site-packages\\tflearn\\config.py:131: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n\n"
+          ],
+          "output_type": "stream"
+        },
+        {
+          "name": "stdout",
+          "text": [
+            "curses is not supported on this machine (please install/reinstall curses for an optimal experience)\n"
+          ],
+          "output_type": "stream"
+        }
+      ],
+      "source": "import glob\nimport os\n\nimport cv2\nimport numpy as np\nfrom sklearn.utils import shuffle\n\nfrom ContinuousGesturePredictor import define_model\n"
     },
     {
       "cell_type": "code",
@@ -20,7 +40,7 @@
         }
       },
       "outputs": [],
-      "source": "#Load Images\ndataset_folder \u003d \"Dataset/\"\nnum_classes \u003d len(os.listdir(dataset_folder))\n\nloadedImages \u003d []\nfor filename in glob.iglob(dataset_folder + \u0027/*/train/*\u0027, recursive\u003dTrue):\n    if os.path.isfile(filename): # filter dirs\n        image \u003d cv2.imread(filename)\n        gray_image \u003d cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n        loadedImages.append(np.expand_dims(gray_image, 2))\n"
+      "source": "# Load Images\ndataset_folder \u003d \"dataset/\"\nnum_classes \u003d len(os.listdir(dataset_folder))\n\nloadedImages \u003d []\nfor filename in glob.iglob(dataset_folder + \u0027/*/train/*\u0027, recursive\u003dTrue):\n    if os.path.isfile(filename): # filter dirs\n        image \u003d cv2.imread(filename)\n        gray_image \u003d cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n        loadedImages.append(np.expand_dims(gray_image, 2))\n"
     },
     {
       "cell_type": "code",
@@ -31,7 +51,7 @@
         }
       },
       "outputs": [],
-      "source": "# Create OutputVector\n\noutputVectors \u003d []\nfor i in range(len(loadedImages)):\n    outputVectors.append([int(k \u003d\u003d i // 1000) for k in range(num_classes)])\n"
+      "source": "# Create OutputVector\noutputVectors \u003d []\nfor i in range(len(loadedImages)):\n    outputVectors.append([int(k \u003d\u003d i // 1000) for k in range(num_classes)])\n"
     },
     {
       "cell_type": "code",
@@ -42,7 +62,7 @@
         }
       },
       "outputs": [],
-      "source": "testImages \u003d []\n\n#Load Images for swing\n\nfor filename in glob.iglob(dataset_folder + \u0027/*/test/*\u0027, recursive\u003dTrue):\n    if os.path.isfile(filename): # filter dirs\n        image \u003d cv2.imread(filename)\n        gray_image \u003d cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n        testImages.append(np.expand_dims(gray_image, 2))\n\ntestLabels \u003d []\n\nfor i in range(len(testImages)):\n    testLabels.append([int(k \u003d\u003d i // 100) for k in range(num_classes)])"
+      "source": "testImages \u003d []\n\n#Load Images for swing\nfor filename in glob.iglob(dataset_folder + \u0027/*/test/*\u0027, recursive\u003dTrue):\n    if os.path.isfile(filename): # filter dirs\n        image \u003d cv2.imread(filename)\n        gray_image \u003d cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n        testImages.append(np.expand_dims(gray_image, 2))\n\ntestLabels \u003d []\n\nfor i in range(len(testImages)):\n    testLabels.append([int(k \u003d\u003d i // 100) for k in range(num_classes)])"
     },
     {
       "cell_type": "code",
@@ -53,7 +73,7 @@
         }
       },
       "outputs": [],
-      "source": "# Define the CNN Model\ntf.reset_default_graph()\nconvnet\u003dinput_data(shape\u003d[None, 215,240,1],name\u003d\u0027input\u0027)\nconvnet\u003dconv_2d(convnet,32,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\nconvnet\u003dconv_2d(convnet,64,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\n\nconvnet\u003dconv_2d(convnet,128,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\n\nconvnet\u003dconv_2d(convnet,256,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\n\nconvnet\u003dconv_2d(convnet,256,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\n\nconvnet\u003dconv_2d(convnet,128,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\n\nconvnet\u003dconv_2d(convnet,64,2,activation\u003d\u0027relu\u0027)\nconvnet\u003dmax_pool_2d(convnet,2)\n\nconvnet\u003dfully_connected(convnet,1000,activation\u003d\u0027relu\u0027)\nconvnet\u003ddropout(convnet,0.75)\n\nconvnet\u003dfully_connected(convnet,6,activation\u003d\u0027softmax\u0027)\n\nconvnet\u003dregression(convnet,optimizer\u003d\u0027adam\u0027,learning_rate\u003d0.001,loss\u003d\u0027categorical_crossentropy\u0027,name\u003d\u0027regression\u0027)\n\nmodel\u003dtflearn.DNN(convnet,tensorboard_verbose\u003d0)\n"
+      "source": "model \u003d define_model()"
     },
     {
       "cell_type": "code",
